--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL=http://localhost:3000
-VITE_BACKEND_URL= https://cbc-backend-u7xe.onrender.com
+VITE_BACKEND_URL=http://localhost:3000
+# VITE_BACKEND_URL= https://cbc-backend-u7xe.onrender.com
